--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "typingcat",
   "displayName": "TypingCat",
   "description": "",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.96.0"
   },
+  "publisher": "Cappucciyes",
   "categories": [
     "Other"
   ],
